# android_native

./: build.gradle  settings.gradle
app/: AndroidManifest.xml  CMakeLists.txt  build.gradle
app/src/: main.cpp  native_app.c
